# bmoney

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yaml  ruff.yaml
bmoney/: cli.py  constants.py
bmoney/app/: app.py
bmoney/utils/: config.py  data.py  deduplication.py  gcloud.py
budgetmoney/: cli.py  constants.py  utils.py
budgetmoney/app/: app.py
budgetmoney/utils/: config.py  data.py  gcloud.py
tests/: test_custom_cat_preservation.py  test_deduplication.py  test_load_master_transaction_df.py  test_smart_categories.py
tests/test_data/: test_has_csv_files.py  test_load_master_transaction_df.py
